# download-renamer-mover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle  docker-compose.yml  entrypoint.sh  generate-sonarr-sdk.sh  log4rs.yml  openapitools.json  package-lock.json  package.json  settings.gradle  sonarr-openapi-v3.yaml  test-file-names.lst  update-docker-version.sh
sonarr-sdk/: .openapi-generator-ignore  Cargo.toml  README.md
sonarr-sdk/.openapi-generator/: FILES
sonarr-sdk/src/apis/: api_info_api.rs  authentication_api.rs  auto_tagging_api.rs  backup_api.rs  blocklist_api.rs  calendar_api.rs  calendar_feed_api.rs  command_api.rs  configuration.rs  custom_filter_api.rs  custom_format_api.rs  cutoff_api.rs  delay_profile_api.rs  disk_space_api.rs  download_client_api.rs  download_client_config_api.rs  episode_api.rs  episode_file_api.rs  file_system_api.rs  health_api.rs  history_api.rs  host_config_api.rs  import_list_api.rs  import_list_config_api.rs  import_list_exclusion_api.rs  indexer_api.rs  indexer_config_api.rs  indexer_flag_api.rs  language_api.rs  language_profile_api.rs  language_profile_schema_api.rs  localization_api.rs  log_api.rs  log_file_api.rs  manual_import_api.rs  media_cover_api.rs  media_management_config_api.rs  metadata_api.rs  missing_api.rs  mod.rs  (+31 more)
sonarr-sdk/src/models/: add_series_options.rs  alternate_title_resource.rs  apply_tags.rs  authentication_required_type.rs  authentication_type.rs  auto_tagging_resource.rs  auto_tagging_specification_schema.rs  backup_resource.rs  backup_type.rs  blocklist_bulk_resource.rs  blocklist_resource.rs  blocklist_resource_paging_resource.rs  certificate_validation_type.rs  command.rs  command_priority.rs  command_resource.rs  command_result.rs  command_status.rs  command_trigger.rs  custom_filter_resource.rs  custom_format_bulk_resource.rs  custom_format_resource.rs  custom_format_specification_schema.rs  database_type.rs  delay_profile_resource.rs  disk_space_resource.rs  download_client_bulk_resource.rs  download_client_config_resource.rs  download_client_resource.rs  download_protocol.rs  episode_file_list_resource.rs  episode_file_resource.rs  episode_history_event_type.rs  episode_resource.rs  field.rs  (+102 more)
(+19 files in other folders)
