[package]
name = "download-renamer-mover"
version = "2.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
log = "0.4.29"
log4rs = "1.4.0"
xmltree = "0.12.0"
regex = "1.12.2"
reqwest = "0.13.1"
sonarr = { path = "./sonarr-sdk" }

[features]
fail-on-warnings = []
