[package]
name = "download-renamer-mover"
version = "2.4.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
poise = "0.6.2"
log = "0.4.31"
log4rs = "1.4.0"
xmltree = "0.12.0"
reqwest = "0.13.4"
sonarr = { path = "./sonarr-sdk" }
fancy-regex = { version = "0.18.0", features = ["default", "perf", "unicode"] }

[features]
fail-on-warnings = []
